syntax = "proto3";

package server.user;

import "google/protobuf/empty.proto";

option go_package = "server/api/v1";

message PostRequest {
  uint32 ID = 1;
}

message PostsResponse {
  repeated PostResponse posts = 1;
}

message PostResponse {
  uint32 ID = 1;
  string Title = 2;
  string Content = 3;
  string Author = 4;
  string PostDate = 5;
}

service PostController {
  rpc GetPostByID(PostRequest) returns (PostResponse) {}
  rpc GetPosts(google.protobuf.Empty) returns (PostsResponse) {}
}